[package]
name = "octolo"
version = "0.1.1"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
edition = "2018"
description = "Open files with local editor from GitHub Web"
license = "Unlicense"

[dependencies]
serde_json = "1.0.39"
byteorder = "1.3.1"
serde = { version = "1.0.90", features = ["derive"] }
clap = "2.33.0"
failure = "0.1.5"
dirs = "1.0.5"
toml = "0.5.0"
handlebars = "1.1.0"
